edit + deletion implement

--- a/ECommercePortfolio/Views/Products/Create.cshtml
+++ b/ECommercePortfolio/Views/Products/Create.cshtml
@@ -20,7 +20,9 @@
     </div>
     <div class="form-group">
         <label asp-for="CategoryId" class="control-label"></label>
-        <input asp-for="CategoryId" class="form-control" />
+        <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId">
+            <option value="">-- Select Category --</option>
+        </select>
         <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
     <div class="form-group">
