--- a/ECommercePortfolio/Views/Products/Edit.cshtml
+++ b/ECommercePortfolio/Views/Products/Edit.cshtml
@@ -2,7 +2,22 @@
 
 <h2>Edit Product</h2>
 
-<form asp-action="Edit">
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="alert alert-danger">
+        <ul>
+            @foreach (var modelState in ViewData.ModelState.Values)
+            {
+                foreach (var error in modelState.Errors)
+                {
+                    <li>@error.ErrorMessage</li>
+                }
+            }
+        </ul>
+    </div>
+}
+
+<form asp-action="Edit" method="post">
     <input type="hidden" asp-for="Id" />
     <div class="form-group">
         <label asp-for="Name" class="control-label"></label>
@@ -21,7 +36,9 @@
     </div>
     <div class="form-group">
         <label asp-for="CategoryId" class="control-label"></label>
-        <input asp-for="CategoryId" class="form-control" />
+        <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId">
+            <option value="">-- Select Category --</option>
+        </select>
         <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
     <div class="form-group">
