--- a/ECommercePortfolio/Views/Products/Index.cshtml
+++ b/ECommercePortfolio/Views/Products/Index.cshtml
@@ -15,6 +15,7 @@
                     <h5 class="card-title">@product.Name</h5>
                     <p class="card-text">@product.Description</p>
                     <p class="card-text">Price: @product.Price.ToString("C")</p>
+                    <p class="card-text">Category: @product.Category?.Name</p>
                     <a href="#" class="btn btn-primary">Add to Cart</a>
                     <a asp-action="Edit" asp-route-id="@product.Id" class="btn btn-secondary">Edit</a>
                     <a asp-action="Details" asp-route-id="@product.Id" class="btn btn-info">Details</a>
