--- a/ECommercePortfolio/Views/Products/Index.cshtml
+++ b/ECommercePortfolio/Views/Products/Index.cshtml
@@ -16,7 +16,8 @@
                     <p class="card-text">@product.Description</p>
                     <p class="card-text">Price: @product.Price.ToString("C")</p>
                     <p class="card-text">Category: @product.Category?.Name</p>
-                    <a href="#" class="btn btn-primary">Add to Cart</a>
+                    <a asp-controller="ShoppingCart" asp-action="AddToShoppingCart" 
+                       asp-route-productId="@product.Id" class="btn btn-primary">Add to Cart</a>
                     <a asp-action="Edit" asp-route-id="@product.Id" class="btn btn-secondary">Edit</a>
                     <a asp-action="Details" asp-route-id="@product.Id" class="btn btn-info">Details</a>
                     <a asp-action="Delete" asp-route-id="@product.Id" class="btn btn-danger">Delete</a>
