--- a/ECommercePortfolio/Views/Shared/_Layout.cshtml
+++ b/ECommercePortfolio/Views/Shared/_Layout.cshtml
@@ -52,6 +52,8 @@
                         </li>
                     }
                 </ul>
+                <partial name="_CartSummary" />
+                <partial name="_LoginPartial" />
             </div>
         </div>
     </nav>
